If the destination file already exists, moveTo[Native] should replace it. Bug 195109 r=sdagley/sr=sfraser